<resources>
    <string name="app_name">Idonate</string>
    <string name="login_label">Login</string>
    <string name="register_label">Register</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="firstname_hint">First Name</string>
    <string name="lastname_hint">Last Name</string>
    <string name="phonenumber_hint">Phone Number</string>
    <string name="email_hint">E-mail</string>
    <string name="aboutus">Η εφαρμογή iDonate δημιουργήθηκε το 2017 στα πλαίσια διπλωματικής εργασίας του Ιονίου Πανεπιστημίου </string>
    <string name="myName">Στεφανία Παπαρήγα</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="address">Διεύθυνση</string>
    <string name="phonenumber">Τηλέφωνο</string>
    <string name="myphone">+306984082255</string>
    <string name="myemail">stefaniapapariga@gmail.com</string>
    <string name="myAddress">Κέρκυρα</string>
    <string name="buttonMap">Βρείτε μας στον Χάρτη</string>
    <string name="quantityLabel">Ποσότητα</string>
    <string name="sizeLabel">Μέγεθος</string>
    <string name="nextLabel">Επόμενο</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_receipt">Receipt</string>
</resources>
